# deployment-notify

./: CHANGES.rst  Dockerfile  README.rst  pyproject.toml  requirements-testing.txt  requirements.txt
docs/changelog/: ZO-5636.change  bugsnag.change  chain.change  changelog.change  empty.change  issues.change  jira-project.change  jira.change  keptn.change  postdeploy.change  previous.change  printdiff.change
src/deployment_notify/: changelog.py  cli.py  slack.py
src/deployment_notify/tests/: test_changelog.py  test_main.py
src/zeit/deploynotify/: __init__.py  changelog.py  cli.py  slack.py
src/zeit/deploynotify/tests/: test_changelog.py  test_cli.py  test_main.py
